[gd_scene load_steps=5 format=3 uid="uid://3h0q3pmncrsf"]

[ext_resource type="Texture2D" uid="uid://da1wuvbeouc4m" path="res://assets/textures/enemy_ship.png" id="1_qvqp1"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_t3j1m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vyctr"]
radius = 29.0
height = 150.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ohabq"]
radius = 14.0
height = 122.0

[node name="Enemy" type="Area2D"]
z_index = 3
rotation = -1.5708
collision_layer = 2
collision_mask = 5
script = ExtResource("1_t3j1m")

[node name="CollisionBody" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vyctr")

[node name="CollisionWings" type="CollisionShape2D" parent="."]
position = Vector2(-1.00536e-06, 23)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_ohabq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.29, 0.29)
texture = ExtResource("1_qvqp1")
flip_h = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["Enemies"]]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
